issue fixed third phase

--- a/src/app/pages/students/add-student/add-student.component.html
+++ b/src/app/pages/students/add-student/add-student.component.html
@@ -164,15 +164,14 @@
                           <!-- don't give a name === doesn't send on POST/GET -->
                           <span class="input-group-btn">
                             <!-- image-preview-clear button -->
-                            <button type="button" class="btn btn-default image-preview-clear" style="display:none;">
+                            <!-- <button type="button" class="btn btn-default image-preview-clear" style="display:none;">
                               <span class="glyphicon glyphicon-remove"></span> Clear
-                            </button>
+                            </button> -->
                             <!-- image-preview-input -->
                             <div class="btn btn-default image-preview-input">
                               <span class="glyphicon glyphicon-folder-open"></span>
                               <span class="image-preview-input-title">Browse</span>
-                              <input type="file" class="custom-file-input" name="studentProfPicEncoded" formControlName="studentProfPicEncoded"
-                                (change)="onSelectFile($event)" accept="image/*" />
+                              <input type="file" class="custom-file-input" name="studentProfPicEncoded" formControlName="studentProfPicEncoded" (change)="onSelectFile($event)" accept="image/*"/>
                               <!-- rename it -->
                             </div>
                           </span>
@@ -186,7 +185,7 @@
 
               <div class="col-sm-3">
                 <div class="mt-2">
-                  <img *ngIf="url" [src]="sanitizer.bypassSecurityTrustUrl(url)" class="img-thumbnail w-75" alt="profile-picture" />
+                  <img *ngIf="url" [src]="sanitizer.bypassSecurityTrustUrl(url)" class="img-thumbnail w-75" alt="profile-picture"/>
                 </div>
               </div>
 
