--- a/src/app/pages/time-table-configuration/time-table-configuration.component.html
+++ b/src/app/pages/time-table-configuration/time-table-configuration.component.html
@@ -102,7 +102,7 @@
                                             <div class='input-group date' id='datetimepicker3'>
                                                 <input type='text' class="form-control" placeholder="Enter school Time Starts"/>
                                                 <span class="input-group-addon">
-                                                    <span class="glyphicon glyphicon-time"></span>
+                                                    <i class='far fa-clock'></i>
                                                 </span>
                                             </div>
                                         </div>
@@ -153,7 +153,7 @@
 
 
                     <div class="row student-info pl-3">
-                      <div class="col-sm-12">
+                      <div class="col-sm-12 table-responsive">
 
                         <table class="table table-bordered">
                           <thead>
@@ -968,7 +968,7 @@
 
                         
                     <div class="row student-info pl-3">
-                        <div class="col-sm-12">
+                        <div class="col-sm-12 table-responsive">
 
                             <table class="table table-bordered">
                                 <thead>
