--- a/src/app/pages/time-table-configuration/time-table-configuration.component.html
+++ b/src/app/pages/time-table-configuration/time-table-configuration.component.html
@@ -102,7 +102,7 @@
                                             <div class='input-group date' id='datetimepicker3'>
                                                 <input type='text' class="form-control" placeholder="Enter school Time Starts"/>
                                                 <span class="input-group-addon">
-                                                    <i class='far fa-clock'></i>
+                                                    <i class="fa fa-times" aria-hidden="true"></i>
                                                 </span>
                                             </div>
                                         </div>
