--- a/src/app/pages/user-access-control/user-access-control.component.scss
+++ b/src/app/pages/user-access-control/user-access-control.component.scss
@@ -11,3 +11,24 @@
 .new-users p{
 padding-left: 20px;
 }
+
+.panel-bar{
+   
+    padding: 14px;
+    border-radius: 5px;
+    
+    font-weight: 900;
+  }
+
+  .panel-bar a i{
+    float: right;
+    padding-right: 60px;
+  }
+
+  .panel-text{
+    
+    border-radius: 5px;
+    padding: 20px;
+    margin-bottom: 30px;
+    color: rgb(127, 127, 123);
+  }
