--- a/src/app/pages/time-table-configuration/time-table-configuration.component.html
+++ b/src/app/pages/time-table-configuration/time-table-configuration.component.html
@@ -19,7 +19,7 @@
 
           <div class="tab-content" id="nav-tabContent">
               <div class="ibox tab-pane show active" id="studentDetails" role="tabpanel" aria-labelledby="studentDetails-tab">
-                <div class="ibox-head">
+                <!-- <div class="ibox-head"> -->
                   <!-- <div class="ibox-title">Edit Student Form</div> -->
                   <!-- <div class="ibox-tools">
                           <a class="ibox-collapse">
@@ -27,7 +27,7 @@
                           <i class="fa fa-times text-danger close-icon" aria-hidden="true"></i>
                           </a>
                       </div> -->
-                </div>
+                <!-- </div> -->
 
                 <div class="ibox-body">
                     <form id="edit-student-form" [formGroup]="timeTableAddForm" (ngSubmit)="onSubmitTimeTable()">
@@ -108,7 +108,7 @@
 
                                       <div class="col-sm-3">
                                         <mat-form-field class="example-full-width">
-                                          <input matInput placeholder="Slot Time For Period in minutes *" type="number" name="periodDuration" formControlName="periodDuration">
+                                          <input matInput placeholder="Slot Time For Period in minutes *" type="time" name="periodDuration" formControlName="periodDuration">
                                           <!-- <mat-error *ngIf="lastName.hasError('required')">
                                             Field is required.
                                           </mat-error> -->
@@ -168,7 +168,7 @@
                                   <div class="form-group mb-0">
                                       <label for="" class="labelSchedule">To</label>
                                       <div class='input-group'>
-                                        <input type='time' class="form-control" id="to_{{period.id}}"/>   
+                                        <input type='time' class="form-control" id="to_{{period.id}}"/> 
                                       </div>
                                   </div>
                               </th>
@@ -182,17 +182,14 @@
                               <td *ngFor="let period of periodArr"> 
 
                                 <mat-form-field class="new-width pb-0 mb-0 pt-0 mt-0">
-                                  <mat-select placeholder="Select Subject *" name="bloodGroup">
-                                    <mat-option value="b+">English</mat-option>
-                                    <mat-option value="o+">Bengali</mat-option>
-                                    <mat-option value="o+">Math</mat-option>
+                                  <mat-select placeholder="Select Subject *" (change)="onSelectSubject($event)" id="subject_{{day?.day}}_{{period?.id}}">
+                                    <mat-option *ngFor="let subject of subjects" value="{{subject?.subjectID}}">{{subject?.subjectName}}</mat-option>
                                   </mat-select>
                                 </mat-form-field>
 
                                 <mat-form-field class="new-width pb-0 mb-0 pt-0 mt-0">
-                                    <mat-select placeholder="Select Teacher *" name="bloodGroup">
-                                      <mat-option value="b+">Teacher1</mat-option>
-                                      <mat-option value="o+">Teacher2</mat-option>
+                                    <mat-select placeholder="Select Teacher *" (change)="onSelectTeacher($event)" id="teacher_{{day?.day}}_{{period?.id}}">
+                                      <mat-option *ngFor="let teacher of teachers" value="{{teacher?.userID}}">{{teacher?.firstName}} {{teacher?.lastName}}</mat-option>
                                     </mat-select>
                                 </mat-form-field>
 
