--- a/src/app/pages/time-table-configuration/time-table-configuration.component.html
+++ b/src/app/pages/time-table-configuration/time-table-configuration.component.html
@@ -177,19 +177,19 @@
 
 
                           <tbody>
-                            <tr *ngFor="let day of daysArr">
+                            <tr *ngFor="let day of daysArr; let i = index">
                               <td class="days-name pt-4">{{day?.day}}</td>
-                              <td *ngFor="let period of periodArr"> 
+                              <td *ngFor="let period of periodArr; let p = index"> 
 
                                 <mat-form-field class="new-width pb-0 mb-0 pt-0 mt-0">
-                                  <mat-select placeholder="Select Subject *" (change)="onSelectSubject($event)" id="subject_{{day?.day}}_{{period?.id}}">
+                                  <mat-select placeholder="Select Subject *" (change)="onSelectSubject($event, day?.day+period?.id)" id="subject_{{day?.day}}_{{period?.id}}">
                                     <mat-option *ngFor="let subject of subjects" value="{{subject?.subjectID}}">{{subject?.subjectName}}</mat-option>
                                   </mat-select>
                                 </mat-form-field>
 
                                 <mat-form-field class="new-width pb-0 mb-0 pt-0 mt-0">
-                                    <mat-select placeholder="Select Teacher *" (change)="onSelectTeacher($event)" id="teacher_{{day?.day}}_{{period?.id}}">
-                                      <mat-option *ngFor="let teacher of teachers" value="{{teacher?.userID}}">{{teacher?.firstName}} {{teacher?.lastName}}</mat-option>
+                                    <mat-select placeholder="Select Teacher *" (change)="onSelectTeacher($event, day?.day, i, period?.id)" id="teacher_{{day?.day}}_{{period?.id}}">
+                                      <mat-option *ngFor="let teacher of filterTeacherarr[day?.day+period?.id]" value="{{teacher?.userID}}">{{teacher?.firstName}} {{teacher?.lastName}}</mat-option>
                                     </mat-select>
                                 </mat-form-field>
 
@@ -198,7 +198,28 @@
                           </tbody>
                         </table>
 
+                        <div class="row">                                    
+                          <div class="col-md-12">
+                            <div class="form-group">
+                              <button class="btn btn-success btn-lg ml-4" type="submit" (click)="onSubmitRoutine()">Submit</button>
+                            </div>
+                          </div>
+                        </div>
+
                       </div>
+
+
+
+
+
+                      <!-- <div class="row">                                    
+                        <div class="col-md-12">
+                          <div class="form-group">
+                            <button class="btn btn-success btn-md" type="submit">Submit</button>
+                          </div>
+                        </div>
+                      </div> -->
+
                     </div>
                 </div>
               </div>
