time table fetch for class done

--- a/src/app/pages/time-table-configuration/time-table-configuration.component.scss
+++ b/src/app/pages/time-table-configuration/time-table-configuration.component.scss
@@ -29,3 +29,8 @@ th p{
 .mat-form-field-wrapper {
     // padding-bottom: .5em;
 }
+
+.subTeaFont {
+    font-size: .8rem;
+    margin-bottom: .3rem;
+}
