input field added for break

--- a/src/app/layouts/app-sidebar/app-sidebar.component.html
+++ b/src/app/layouts/app-sidebar/app-sidebar.component.html
@@ -4,13 +4,13 @@
 
     <li class="nav-item">
       <a class="nav-link active" data-toggle="tab" aria-controls="menu1" href="#menu1" id="menu1-tab">
-        <i class="fa fa-bookmark"></i> Management
+        <i class="fa fa-bookmark"></i> Mngm
       </a>
     </li>
 
     <li class="nav-item">
       <a class="nav-link" data-toggle="tab" aria-controls="menu2" href="#menu2" id="menu2-tab">
-        <i class="fa fa-bookmark"></i> Configuration
+        <i class="fa fa-bookmark"></i> Conf
       </a>
     </li>
 
