--- a/src/app/pages/time-table-configuration/time-table-configuration.component.html
+++ b/src/app/pages/time-table-configuration/time-table-configuration.component.html
@@ -73,9 +73,9 @@
                                   </mat-form-field>
                               </div>
 
-                                <div class="col-sm-3">
+                                <!-- <div class="col-sm-3">
                                     
-                                  </div>
+                                  </div> -->
 
                                   <!-- <div class="col-sm-3">
                                       <mat-form-field class="example-full-width">
@@ -124,18 +124,47 @@
                                           </mat-form-field>
                                         </div>
 
-                                        <div class="col-sm-3">
+                                        <!-- <div class="col-sm-3">
                                             
-                                          </div>
+                                          </div> -->
 
                                           <div class="col-sm-3">
                                               <mat-form-field class="example-full-width">
-                                                <input matInput placeholder="Select of Periods *" type="number" name="period" formControlName="period">
-                                                <!-- <mat-error *ngIf="lastName.hasError('required')">
-                                                  Field is required.
-                                                </mat-error> -->
+                                                <input matInput placeholder="No. of Periods *" type="number" name="period" formControlName="period" (change)="onChangeNoOfPeriod()" (keyup)="onChangeNoOfPeriod()">
                                               </mat-form-field>
                                             </div>
+
+                                            <div class="col-sm-3">
+                                                <mat-form-field class="example-full-width">
+                                                  <input matInput placeholder="Break Duration *" type="time" name="breakDuration" formControlName="breakDuration">
+                                                  <!-- <mat-error *ngIf="lastName.hasError('required')">
+                                                    Field is required.
+                                                  </mat-error> -->
+                                                </mat-form-field>
+                                              </div>
+
+                                              <div class="col-sm-3">
+                                                  <mat-form-field class="example-full-width">
+                                                    <input matInput placeholder="Number of Break *" type="number" name="numOfBreak" formControlName="numOfBreak">
+                                                    <!-- <mat-error *ngIf="lastName.hasError('required')">
+                                                      Field is required.
+                                                    </mat-error> -->
+                                                  </mat-form-field>
+                                              </div>
+
+                                              <!-- <div class="col-sm-3">
+                                                  <mat-form-field class="example-full-width">
+                                                    <input matInput placeholder="After which period *" type="number" name="afterPeriod" formControlName="afterPeriod">
+                                                  </mat-form-field>
+                                              </div> -->
+
+                                              <div class="col-sm-3">
+                                                  <mat-form-field class="example-full-width">
+                                                    <mat-select placeholder="After which period *" name="afterPeriod" formControlName="afterPeriod">
+                                                        <mat-option *ngFor="let period of periods" [value]=period.id>{{period.name}}</mat-option>
+                                                    </mat-select>
+                                                  </mat-form-field>
+                                              </div>
 
                                             <div class="row pl-3">                                    
                                                 <div class="col-md-12">
@@ -178,7 +207,7 @@
 
                           <tbody>
                             <tr *ngFor="let day of daysArr; let i = index">
-                              <td class="days-name pt-4">{{day?.day}}</td>
+                              <td class="days-name pt-4 text-uppercase">{{day?.day}}</td>
                               <td *ngFor="let period of periodArr; let p = index"> 
 
                                 <mat-form-field class="new-width pb-0 mb-0 pt-0 mt-0">
